--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,15 @@
-buildscript {
-  repositories {
-    mavenLocal()
-
-    dependencies {
-      classpath 'com.typelead:gradle-eta:latest.release'
-    }
-  }
+plugins {
+    id 'com.typelead.eta' version '0.5.4'
 }
 
-apply plugin: 'eta'
+apply plugin: 'com.typelead.eta'
 apply plugin: 'application'
 
 eta {
-    useSystemEta   = true
-    useSystemEtlas = true
+    version = '0.7.2b1'
+    etlasVersion = '1.3.0.0'
 }
 
 dependencies {
-  eta {
-    compile 'base:4.8.2.0'
-  }
+  compile eta('base:4.8.2.0')
 }
