--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,7 @@
 plugins {
-    id 'com.typelead.eta' version '0.5.6'
+    id 'com.typelead.eta' version '0.5.9'
+    id 'application'
 }
-
-apply plugin: 'application'
 
 eta {
     version = '0.7.2b1'
